syntax = "proto3";

package test.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "psm/state/v1/metadata.proto";

option go_package = "github.com/pentops/o5-test-app/internal/gen/test/v1/test_pb";

message GreetingKeys {
  option (j5.ext.v1.psm).entity_name = "greeting";

  string greeting_id = 1 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.key).primary_key = true
  ];
}

message GreetingState {
  psm.state.v1.StateMetadata metadata = 1 [(buf.validate.field).required = true];

  GreetingKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  GreetingStatus status = 3 [(j5.list.v1.field).enum.filtering = {
    filterable: true
    default_filters: ["GREETING_STATUS_INITIATED"]
  }];

  GreetingStateData data = 4;
}

message GreetingStateData {
  string name = 1;
  optional string reply_message = 2;

  string app_version = 3;
}

enum GreetingStatus {
  GREETING_STATUS_UNSPECIFIED = 0;
  GREETING_STATUS_INITIATED = 1;
  GREETING_STATUS_REPLIED = 2;
}

message GreetingEvent {
  psm.state.v1.EventMetadata metadata = 1 [(buf.validate.field).required = true];
  GreetingKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).message.flatten = true
  ];
  GreetingEventType event = 3 [(buf.validate.field).required = true];
}

message GreetingEventType {
  oneof type {
    option (j5.list.v1.oneof).filtering.filterable = true;

    Initiated initiated = 1;
    Replied replied = 2;
  }

  message Initiated {
    string name = 1;
    string app_version = 2;
    TestError worker_error = 3;
  }

  message Replied {
    string reply_message = 1;
  }
}

message TestError {
  string message = 1;
  uint32 code = 2;
}
